[package]
name = "backup-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-ssh2-tokio = { version = "0.6", features = ["openssl"] }
clap = { version = "4.5", features = ["derive", "env"] }
utoipa = { version = "4", features = ["axum_extras", "chrono", "decimal", "debug"] }
chrono = { version = "0.4", features = ["serde"] }
rusoto_core = "0.48"
rusoto_credential = "0.48"
rusoto_s3 = "0.48"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.5"
color-eyre = "0.6"
futures = "0.3"
atty = "0.2"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
lazy_static = "1.4"
prometheus = "0.13"
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tower-http = { version = "0.5", features = ["cors", "tokio", "trace", "limit", "fs", "normalize-path"] }
