[package]
name = "backup-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
atty = "0.2"
axum = { version = "0.7", features = ["macros"] }
bytes = "1.5"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
color-eyre = "0.6"
dotenv = "0.15.0"
futures = "0.3"
lazy_static = "1.4"
prometheus = "0.13"
rusoto_core = "0.48"
rusoto_credential = "0.48"
rusoto_s3 = "0.48"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
toml = "0.8"
tower-http = { version = "0.5", features = ["cors", "tokio", "trace", "limit", "fs", "normalize-path"] }
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "4", features = ["axum_extras", "chrono", "decimal", "debug"] }
